# BTaggingEffAnalyzer

./: .gitignore  .pylintrc  README.md  analysis2016postVFP.ipynb  analysis2016preVFP.ipynb  analysis2017.ipynb  analysis2018.ipynb  analysisDataPreparation.ipynb  btaggingEffMaps.cpp  generate.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
btageffanalyzer/: __init__.py
btaggingeffmaps/: __init__.py
notebooks/: analysis2016postVFP.ipynb  analysis2016preVFP.ipynb  analysis2017.ipynb  analysis2018.ipynb
output/: btageffmap-DeepCSV-medium-2016postVFP.json  btageffmap-DeepCSV-medium-2017.json  btageffmap-DeepCSV-medium-2018.json  btageffmap-DeepJet-loose-2016-False.json  btageffmap-DeepJet-loose-2016-True.json  btageffmap-DeepJet-loose-2017-False.json  btageffmap-DeepJet-loose-2018-False.json  btageffmap-DeepJet-medium-2016postVFP.json  btageffmap-DeepJet-medium-2017.json  btageffmap-DeepJet-medium-2018.json  btaguncmap-DeepCSV-loose-2016postVFP.json  btaguncmap-DeepCSV-loose-2017.json  btaguncmap-DeepCSV-loose-2018.json  btaguncmap-DeepCSV-medium-2016postVFP.json  btaguncmap-DeepCSV-medium-2017.json  btaguncmap-DeepCSV-medium-2018.json  btaguncmap-DeepJet-loose-2016-False.json  btaguncmap-DeepJet-loose-2016-True.json  btaguncmap-DeepJet-loose-2016postVFP.json  btaguncmap-DeepJet-loose-2017-False.json  btaguncmap-DeepJet-loose-2017.json  btaguncmap-DeepJet-loose-2018-False.json  btaguncmap-DeepJet-loose-2018.json  btaguncmap-DeepJet-medium-2016postVFP.json  btaguncmap-DeepJet-medium-2017.json  btaguncmap-DeepJet-medium-2018.json
(+2 files in other folders)
